fix(graph): flickering when loading

--- a/geo-ai-explorer-ui/src/app/graph-explorer/graph-explorer.component.scss
+++ b/geo-ai-explorer-ui/src/app/graph-explorer/graph-explorer.component.scss
@@ -10,7 +10,9 @@
     height: 100%;
 }
 
-
+.graph-hidden {
+    visibility: hidden;
+}
 
 div {
     width: 100%;
